--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body">
-    
+<body>
     <!-- Шапка сайта -->
     <header class="header">
         <nav class="header-nav">
             <a class="header-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
             <ul class="nav-list list">
-                <li class="nav-item"><a class="link current" href="./index.html">Студия</a></li>
-                <li class="nav-item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-item"><a class="link" href="">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link link current" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact-list list">
-            <li class="contact-item"><a class="contact-text link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact-item"><a class="contact-text link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-item"><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     
@@ -100,7 +99,7 @@
         <a class="footer-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <address class="footer-adress">
             <ul class="footer-list list">
-                <li class="footer-item"><a class="footer-link adr link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="footer-item"><a class="footer-link link adr" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li class="footer-item"><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="footer-item"><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
