--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,17 @@
         <nav>
             <a class="header-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
             <ul class="nav-list list">
-                <li class="nav-item"><a class="link" href="./index.html">Студия</a></li>
-                <li class="nav-item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-item"><a class="link" href="">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="nav-link link current" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact-list list">
-            <li class="contact-item"><a class="contact-text link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact-item"><a class="contact-text link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-item"><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    
     <!-- Основная часть -->
     <main>
         <section class="filter">
@@ -117,12 +118,13 @@
             </ul>
         </section>
     </main>
+    
     <!-- Подвал -->
     <footer class="footer">
         <a class="footer-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <address class="footer-adress">
             <ul class="footer-list list">
-                <li class="footer-item"><a class="footer-link link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="footer-item"><a class="footer-link link adr" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li class="footer-item"><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="footer-item"><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
